<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ice moo moo</string>
    <string name="action_settings">Settings</string>
    <string name="tryAgain">ลองใหม่อีกครั้ง</string>
    <string name="amount">จำนวน</string>
    <string name="table">โต๊ะ</string>
    <string name="ref">รหัสอ้างอิง</string>
    <string name="order">สั่งอาหาร</string>
    <string name="close">ปิด</string>
    <string name="instruction">ข้อมูลการใช้งาน</string>
    <string name="comment">comment</string>
    <string name="take_home">สั่งกลับบ้าน</string>
    <string name="ok_btn">ตกลง</string>
    <string name="cancel_btn">ยกเลิก</string>
    
    <!-- message -->
    <string name="please_select_gate">กรุณาเลือก Gate</string>
    <string name="please_fill_username">กรุณากรอก ชื่อผู้ใช้</string>
    <string name="please_fill_password">กรุณากรอก รหัสผ่าน</string>
	<string name="standard">Standard</string>
	<string name="order_success">ดำเนินการสำเร็จ</string>
	<string name="exit_app_title">ออกจากโปรแกรม</string>
	<string name="exit_app_msg">ยืนยันต้องการออกจากโปรแกรม</string>
	<string name="session_timeout_title">Session Timeout</string>
	<string name="session_timeout_msg">การดำเนินการไม่สำเร็จ กรุณาลองใหม่อีกครั้ง</string>
	<string name="instruction_detail">\t\tรหัสอ้างอิง คือ สิ่งที่ใช้ระบุตัวตนลูกค้าและไม่ซ้ำกับลูกค้าคนอื่น (เช่น หมายเลขโทรศัพท์ เป็นต้น) ฉะนั้นทุกครั้งที่ลูกค้าสั่งอาหาร ลูกค้าจำเป็นต้องไส่ รหัสอ้างอิง เดิมทุกครั้ง</string>
    
    <string-array name="jazzy_effects">
        <item>@string/standard</item>
        <item>Grow</item>
        <item>Cards</item>
        <item>Curl</item>
        <item>Wave</item>
        <item>Flip</item>
        <item>Fly</item>
        <item>ReverseFly</item>
        <item>Helix</item>
        <item>Fan</item>
        <item>Tilt</item>
        <item>Zipper</item>
        <item>Fade</item>
        <item>Twirl</item>
        <item>SlideIn</item>
    </string-array>
    
</resources>
