<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:paddingTop="10dp"
  android:paddingLeft="10dp"
  android:paddingRight="10dp"
  android:background="@drawable/alert_dialog_bg"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
    <ImageView 
        android:id="@+id/image"
        android:layout_gravity="center_horizontal"
        android:layout_width="180dp"
        android:layout_height="180dp" />
    
    <TextView
	    android:id="@+id/name"
	    android:layout_gravity="center_horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="18sp"
	    android:textColor="@android:color/black"/>
    
    <LinearLayout 
		  android:orientation="horizontal"
		  android:layout_marginTop="10dp"
		  android:layout_width="match_parent"
		  android:layout_height="match_parent">
		  
        <TextView
            android:text="@string/amount"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dp"
		    android:layout_gravity="center_vertical"
		    android:textColor="@android:color/black"/>
        
        <TextView
            android:id="@+id/amount"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:textColor="@android:color/black"/>
        
        <SeekBar
            android:id="@+id/seekAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="20"
            android:secondaryProgress="20" />
    
	</LinearLayout>
	
    <LinearLayout 
		  android:orientation="horizontal"
		  android:layout_width="match_parent"
		  android:layout_height="match_parent">
        
        <EditText
            android:id="@+id/tableName"
            android:hint="@string/table"
            android:textSize="12sp"
            android:layout_weight="0.2"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black" />
        
        <EditText
            android:id="@+id/ref"
            android:hint="@string/ref"
            android:textSize="12sp"
            android:layout_weight="0.4"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black" />
        
        <CheckBox 
            android:id="@+id/take_home"
            android:hint="@string/take_home"
            android:textSize="12sp"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        
	</LinearLayout>
	
    <LinearLayout 
		  android:orientation="horizontal"
		  android:layout_width="match_parent"
		  android:layout_marginTop="10dp"
		  android:layout_height="match_parent">
        
        <EditText
            android:id="@+id/comment"
            android:hint="@string/comment"
            android:gravity="left|top"
            android:textSize="12sp"
            android:inputType="textMultiLine"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black" />
        
	</LinearLayout>
	
    <LinearLayout 
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_marginTop="10dp"
		  android:layout_marginBottom="10dp"
		  android:layout_height="match_parent">
        
        <TextView
            android:text="@string/instruction"
            android:textStyle="bold"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black"/>
        
        <TextView
            android:text="@string/instruction_detail"
            android:singleLine="false"
            android:textSize="12sp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black"/>
        
   </LinearLayout>
    
    
</LinearLayout>